[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/Player.gd" type="Script" id=1]
[ext_resource path="res://image/player.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16.7199, 15.807 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 35, 100 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 42, 100 )

[node name="Player" type="RigidBody2D" index="0" groups=[
"player",
]]

visible = false
position = Vector2( 118, 148 )
input_pickable = false
collision_layer = 2
collision_mask = 117
mode = 0
mass = 50.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 5
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Collision", "Transform" ]
velocity = 200.0

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
rotation = 0.785398
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="2"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Left" type="TouchScreenButton" parent="CanvasLayer" index="0"]

position = Vector2( 35, 300 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 2 )
shape_centered = false
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Right" type="TouchScreenButton" parent="CanvasLayer" index="1"]

position = Vector2( 189, 300 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 2 )
shape_centered = false
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Right2" type="TouchScreenButton" parent="CanvasLayer" index="2"]

position = Vector2( 112, 300 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 3 )
shape_centered = false
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]

[connection signal="pressed" from="CanvasLayer/Left" to="." method="_on_Left_pressed"]

[connection signal="pressed" from="CanvasLayer/Right" to="." method="_on_Right_pressed"]

[connection signal="pressed" from="CanvasLayer/Right2" to="." method="_on_Right2_pressed"]


